# ChangeLog for app-admin/sysstat
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.87 2007/11/11 16:31:31 jer Exp $

  11 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  -files/sysstat-8.0.0-make.patch, -sysstat-8.0.0.ebuild:
  Version clean up.

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> sysstat-8.0.1.ebuild:
  alpha/sparc stable wrt #198559

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> sysstat-8.0.1.ebuild:
  amd64 stable wrt #198559

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> sysstat-8.0.1.ebuild:
  Stable on ppc64; bug #198559

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org> sysstat-8.0.1.ebuild:
  Stable on x86 (bug #198559)

  09 Nov 2007; nixnut <nixnut@gentoo.org> sysstat-8.0.1.ebuild:
  Stable on ppc wrt bug 198559

  09 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  -files/sysstat-5.0.5-gcc4.diff, -sysstat-7.0.4-r2.ebuild:
  Remove deprecated version and old patch.

  09 Nov 2007; Jeroen Roovers <jer@gentoo.org> sysstat-8.0.1.ebuild:
  Stable for HPPA (bug #198559).

*sysstat-8.0.2 (09 Nov 2007)

  09 Nov 2007; Jeroen Roovers <jer@gentoo.org> +sysstat-8.0.2.ebuild:
  Version bump.

  18 Oct 2007; Christoph Mende <angelos@gentoo.org> sysstat-8.0.0.ebuild:
  Stable on amd64 wrt bug #194877

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> -sysstat-5.0.5-r2.ebuild:
  Removing ancient version, despite lacking mips keywording on newer versions,
  but especially because I promised myself never to touch this ebuild (bug
  #190537).

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  sysstat-8.0.0.ebuild:
  ppc stable, bug #194877

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org> sysstat-8.0.0.ebuild:
  alpha/sparc/x86 stable wrt #194877

  06 Oct 2007; Tom Gall <tgall@gentoo.org> sysstat-8.0.0.ebuild:
  stable on ppc64, bug #194877

  06 Oct 2007; Jeroen Roovers <jer@gentoo.org> sysstat-8.0.0.ebuild:
  Stable for HPPA (bug #194877).
