@@ -8,6 +8,7 @@ RMD160 d7e9059d390194bfc90a9adae65a974ac1904f50 files/sysstat.init.d 529
 SHA256 2b563aef917fd372e33b8c8f47b254cd1102ebe2c59ffbb6952324710346aa0e files/sysstat.init.d 529
 DIST sysstat-8.0.1.tar.gz 211616 RMD160 92d6b3885751fe0815bf36f0377bc593f5434034 SHA1 b0c9815b6f80e990760543122fd8cd0901785574 SHA256 117a4386ce9d3629d8a532abb2b014b64c80ce33525929cd72a7a4bc1b86be18
 DIST sysstat-8.0.2.tar.gz 212253 RMD160 c7b82ab783d741c14530fe0012da541ef1aa5452 SHA1 e5a876fadbc08958b0842c2c8aea23a9cb0a9184 SHA256 2f1cbe8c433bde715e3d28b173c491370eb9d0b3185c6c403e944c7a6ef0dd5d
+DIST sysstat-8.0.3.tar.gz 213775 RMD160 a8fa08769726ba3a669de420593242f8f1883837 SHA1 fd2ac15ce5a61e4d744e88ef449c9b928bd07df4 SHA256 9470d1ec3d958cacb08657d3eb8c0c6c7b22b92fbfcface822afa282510aab4d
 EBUILD sysstat-8.0.1.ebuild 958 RMD160 fe376a13a0e586509c9b75c4f71e88061a86e81e SHA1 a77f5001ea50b66908a1f306ac3b5d6e331b0183 SHA256 617ffe81acefd3ce17321c897b9b320f00bab47fa0b5a70cbc3521b2f53f1226
 MD5 4b96f4746471bea1f2936bc86d441101 sysstat-8.0.1.ebuild 958
 RMD160 fe376a13a0e586509c9b75c4f71e88061a86e81e sysstat-8.0.1.ebuild 958
@@ -16,10 +17,14 @@ EBUILD sysstat-8.0.2.ebuild 961 RMD160 e5fee3b58b2a36919eb1b1a48142edfe9efbd528 
 MD5 cb5b570a3e800f43cee4fbc6617c0ac0 sysstat-8.0.2.ebuild 961
 RMD160 e5fee3b58b2a36919eb1b1a48142edfe9efbd528 sysstat-8.0.2.ebuild 961
 SHA256 41f8390322baab72fd87030296aa8139da771d1e784102209681c70d304ac398 sysstat-8.0.2.ebuild 961
-MISC ChangeLog 11342 RMD160 257aeabc4a9cdf17601c861a2e2e293aacf6979f SHA1 732e20c0abb14de61285145216ac06c67748d98d SHA256 e60647aa34b47b3bcb8174bff975bc1b01588f51e14008b8c5148a460fb53994
-MD5 15f4bdd911450b5d33e7e86ac54cf540 ChangeLog 11342
-RMD160 257aeabc4a9cdf17601c861a2e2e293aacf6979f ChangeLog 11342
-SHA256 e60647aa34b47b3bcb8174bff975bc1b01588f51e14008b8c5148a460fb53994 ChangeLog 11342
+EBUILD sysstat-8.0.3.ebuild 961 RMD160 b076c75d6699bc8f11f8fff79a1bd5c55ade64a5 SHA1 4daa48608ed8c1aa0abd8a945f061d3aca6ae581 SHA256 ed409e123c5a3852edbb356ab99af03221eee31e27b71e6e14532e257c76919a
+MD5 248629910d7104022da836517c25955a sysstat-8.0.3.ebuild 961
+RMD160 b076c75d6699bc8f11f8fff79a1bd5c55ade64a5 sysstat-8.0.3.ebuild 961
+SHA256 ed409e123c5a3852edbb356ab99af03221eee31e27b71e6e14532e257c76919a sysstat-8.0.3.ebuild 961
+MISC ChangeLog 11484 RMD160 1a867b57c966f14c21751a56ba18a13c79422a56 SHA1 bc4c85a911321c6bb215b32898a84723b92fd255 SHA256 1f3ca6dfb57dd7219bd3446dd430422493ddfe8868c8fc147ff2834347584a59
+MD5 a61f188bcd54b542581b42abcc50e92b ChangeLog 11484
+RMD160 1a867b57c966f14c21751a56ba18a13c79422a56 ChangeLog 11484
+SHA256 1f3ca6dfb57dd7219bd3446dd430422493ddfe8868c8fc147ff2834347584a59 ChangeLog 11484
 MISC metadata.xml 252 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 SHA1 ddd00321e20f4a53a140eeb56cb01b9fab24d657 SHA256 76fd24f00e95b2892ca60acdce02d8c85dfeff84fc89ca14ffdbc00b82de44b3
 MD5 fbe6e8a03b222b84e9afcf23787c30dc metadata.xml 252
 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 metadata.xml 252
@@ -30,3 +35,6 @@ SHA256 509212c302e124dfe346d20ba8f43978d1a66dfdbfbe47dbf6354076808e4d22 files/di
 MD5 c4f53d84945e3066858aa0b18a10ecc1 files/digest-sysstat-8.0.2 241
 RMD160 157f44b9cd7c7c67dbbf275a6eef9472d09b3fd2 files/digest-sysstat-8.0.2 241
 SHA256 00519cd5ba9c1138df120c1e4c45b6813c7ae83be014fc643ee0214d164aa8ba files/digest-sysstat-8.0.2 241
+MD5 c550fda9878ae47ce64bd44377fc46f9 files/digest-sysstat-8.0.3 241
+RMD160 a5e7d8384d7f60a812c3890d8f3deabf44e84fc2 files/digest-sysstat-8.0.3 241
+SHA256 79cd5684635e55dfd91df2f4210a1aeb48da05902829dc52123167e3eba17fe2 files/digest-sysstat-8.0.3 241
