@@ -1,0 +1,3 @@
+MD5 3d6c330cb7afb7a15de409a5039826ca sysstat-8.0.3.tar.gz 213775
+RMD160 a8fa08769726ba3a669de420593242f8f1883837 sysstat-8.0.3.tar.gz 213775
+SHA256 9470d1ec3d958cacb08657d3eb8c0c6c7b22b92fbfcface822afa282510aab4d sysstat-8.0.3.tar.gz 213775
